ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-ingress
  labels:
    name: sandbox-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: web.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-deployment-service
                port:
                  number: 80
    - host: syncthing.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: syncthing-deployment-service
                port:
                  number: 8384
    - host: prometheus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server-np
                port:
                  number: 80

    - host: grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-np
                port:
                  number: 3000
