ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-ingress
  labels:
    name: sandbox-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /hello-deployment
            pathType: Prefix
            backend:
              service:
                name: hello-deployment-service
                port:
                  number: 80
